--- a/ceres/templates/dashboard/index.html
+++ b/ceres/templates/dashboard/index.html
@@ -1,2 +1,2 @@
 {% extends 'partials/base.html' %}
-{% block title %} Index Page {% endblock %}
+{% block title %} Dashboard | Ceres-WMS {% endblock %}
