--- a/ceres/templates/dashboard/create-challan.html
+++ b/ceres/templates/dashboard/create-challan.html
@@ -1,7 +1,7 @@
 {% extends 'partials/base.html' %}
 <!-- Title -->
 {% block title %} {{ title }} {% endblock %}
-
+{% load crispy_forms_tags %}
 <!-- Button to add user -->
 {% block pageheading %} {{ heading }} {% endblock %}
 
