--- a/ceres/templates/dashboard/create-office.html
+++ b/ceres/templates/dashboard/create-office.html
@@ -24,8 +24,8 @@
                     {% if form.errors %}
                     {% endif %}
                     <span>
-                        <a href="{% url 'view-trader' %}" class="btn btn-secondary"><span class="text">Cancel</span></a>
-                        <input class="btn btn-primary float-right" type="submit" value="Create Trader">
+                        <a href="{% url 'offices' %}" class="btn btn-secondary"><span class="text">Cancel</span></a>
+                        <input class="btn btn-primary float-right" type="submit" value="Create Office">
                     </span>
                 </form>
             </div>
