--- a/ceres/templates/dashboard/warehouse.html
+++ b/ceres/templates/dashboard/warehouse.html
@@ -1,4 +1,5 @@
 {% extends 'partials/base.html' %}
+{% load crispy_forms_tags %}
 <!-- Title -->
 {% block title %} {{ title }} {% endblock %}
 
@@ -11,6 +12,62 @@
 <!-- Main content -->
 {%block content %}
 {% if user.is_authenticated and user.is_staff %}
-
+<script type="text/javascript">
+    $(document).ready( function () {
+        $('#whtable').DataTable();
+    });
+</script>
+<div class="row">
+    <!-- Create Warhouse -->
+    <div class="col-md-3">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                Create New Warehouse
+            </div>
+            <div class="card-body">
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <input class="btn btn-primary" type="submit" value="Create Warehouse">
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- View Warehouse -->
+    <div class="col-md-9">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                Showing all warehouses
+            </div>
+            <div class="card-body">
+                <table id="whtable" class="display compact">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Code</th>
+                <th>Office Branch</th>
+                <th>Date Added</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for wh in warehouses %}
+            <tr>
+                <td><a href="{% url 'update-warehouse' wh.id %}">{{ wh.code }}</a></td>
+                <td>{{ wh.name }}</td>
+                <td>{{ wh.office_id.name }}</td>
+                <td>{{ wh.date_added }}</td>
+                <td>
+                    <a href="{% url 'update-warehouse' wh.id %}" class="btn btn-info btn-circle btn-sm"><i class="fas fa-pen"></i></a>
+                    <a href="{% url 'delete-warehouse' wh.id %}" class="btn btn-danger btn-circle btn-sm"><i class="fas fa-trash"></i></a>
+                </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+            </div>
+        </div>
+    </div>
+</div>
 {% endif %}
 {% endblock %}
