--- a/ceres/templates/partials/base.html
+++ b/ceres/templates/partials/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
+{% load crispy_forms_tags %}
 <head>
 
     <meta charset="utf-8">
@@ -18,7 +19,10 @@
 
     <!-- Custom styles for this template-->
     <link href="{% static 'dashboard/css/sb-admin-2.min.css' %}" rel="stylesheet">
-     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <link href="{% static 'dashboard/css/customstyle.css' %}" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.js"></script>
 </head>
@@ -61,7 +65,7 @@
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-boxes"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">Ceres - WMS</div>
+            <div class="sidebar-brand-text mx-3">ProVentory</div>
         </a>
 
         <!-- Divider -->
@@ -91,6 +95,7 @@
             </a>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
+                    <a class="collapse-item" href="{% url 'view-invoice' %}">Invoices</a>
                     <h6 class="collapse-header">Inward Challans:</h6>
                     <a class="collapse-item" href="{% url 'create-challan' %}">Create Challan</a>
                     <a class="collapse-item" href="{% url 'view-challan' %}">View all Challans</a>
@@ -125,13 +130,8 @@
             <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Items</h6>
-                    <a class="collapse-item" href="{% url 'create-item' %}">Create New Item</a>
-                    <a class="collapse-item" href="{% url 'view-item' %}">View Items</a>
-
-                    <h6 class="collapse-header">Packaging</h6>
-                    <a class="collapse-item" href="{% url 'create-packaging' %}">Create Package Type</a>
-                    <a class="collapse-item" href="{% url 'view-packaging' %}">View Packaging</a>
+                    <a class="collapse-item" href="{% url 'view-item' %}">Items</a>
+                    <a class="collapse-item" href="{% url 'view-packaging' %}">Packaging</a>
                 </div>
             </div>
         </li>
@@ -167,7 +167,7 @@
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Company:</h6>
                     <a class="collapse-item" href="{% url 'offices' %}">Offices</a>
-                    <a class="collapse-item" href="{% url 'warehouses' %}">Warehouses</a>
+                    <a class="collapse-item" href="{% url 'view-warehouse' %}">Warehouses</a>
                     <a class="collapse-item" href="{% url 'employee' %}">Employee</a>
                 </div>
             </div>
@@ -201,7 +201,7 @@
         <!-- Main Content -->
         <div id="content">
             <!-- Topbar -->
-            <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+            <nav class="navbar navbar-expand navbar-light bg-white topbar mb-2 static-top shadow">
                 <!-- Topbar Search -->
                 <form
                         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
@@ -326,5 +326,12 @@
 <script src="{% static 'dashboard/js/sb-admin-2.min.js' %}"></script>
 <script src="{% static 'dashboard/js/sb-admin-2.js' %}"></script>
 <script src="{% static 'dashboard/js/customfunctions.js' %}" type="text/javascript"></script>
+
+<!-- DataTables -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.25/af-2.3.7/b-1.7.1/b-colvis-1.7.1/b-html5-1.7.1/b-print-1.7.1/cr-1.5.4/date-1.1.0/fc-3.3.3/kt-2.6.2/r-2.2.9/rg-1.1.3/rr-1.2.8/sl-1.3.3/datatables.min.css"/>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.25/af-2.3.7/b-1.7.1/b-colvis-1.7.1/b-html5-1.7.1/b-print-1.7.1/cr-1.5.4/date-1.1.0/fc-3.3.3/kt-2.6.2/r-2.2.9/rg-1.1.3/rr-1.2.8/sl-1.3.3/datatables.min.js"></script>
+
 </body>
 </html>
